ngx-chips disabled style and error message style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
 </div> -->
 <!-- <app-scroll-table></app-scroll-table> -->
 <!-- <app-charts></app-charts> -->
-<app-dynamic-form></app-dynamic-form>
+<!-- <app-dynamic-form></app-dynamic-form> -->
+<app-ngx-chips></app-ngx-chips>
